# snacks-tracker

./: README.md  db.sqlite3  pyproject.toml
snack_tracker_project/: settings.py  urls.py
snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_snack_name.py  0003_snack_description_alter_snack_name.py
templates/: _base_template.html  about.html  snack_detail.html  snack_list.html
